--- a/css/styles.css
+++ b/css/styles.css
@@ -1,338 +1,384 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    box-sizing: border-box;
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
 }
-
 
 
 /* Navigation Section */
+
 .top-navigation {
-	background-color: black;
-	position: fixed;
-	width: 100%;
-	z-index: 9999;
+  /*background-color: #F5F5F5;*/
+  background-color: white;
+  position: fixed;
+  width: 100%;
+  /*z-index: 9999;*/
+  text-align: center;
 }
 
-.top-navigation > .content {
-	height: 4.375rem;
-	padding-top: 7px;
-	font-family: ubuntu;
-    -webkit-font-smoothing: antialiased;
+.top-navigation>.content {
+  height: 4.375rem;
+  padding-top: 7px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: lighter;
+  -webkit-font-smoothing: antialiased;
 }
 
-.top-navigation .links li  {
-	display: inline-block;
-	margin-left: 25px;
-	
+.top-navigation .links li {
+  display: inline-block;
+  margin-left: 25px;
 }
 
 .top-navigation a {
-    color: white;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 .top-navigation .links {
-	float: right;
-	font-size: 16px;
-	margin-top: 1.7rem;
-	color: white;
-
+  /*float: right;*/
+  font-size: 16px;
+  margin-top: 1.7rem;
+  color: white;
 }
 
 .header {
-	font-size: 20px;
-	color: white;
-	padding-top: 24px;
-	color: white;
-    -webkit-font-smoothing: antialiased;
+  font-size: 20px;
+  color: white;
+  padding-top: 24px;
+  color: white;
+  -webkit-font-smoothing: antialiased;
 }
 
 .content {
-    padding: 0 0.938rem;
-    margin: 0 auto;
-    width: 97%;
+  padding: 0 0.938rem;
+  margin: 0 auto;
+  width: 97%;
 }
 
 
 /* Introduction */
 
 .introduction {
-    background-color: black;
-    background-position-x: 50%;
-    background-position-y: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 45.938rem;
-    overflow: auto;   
+  /*background-color: #F5F5F5;*/
+  background-color: white;
+  background-position-x: 50%;
+  background-position-y: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 59.4rem;
+  overflow: auto;
 }
 
 .introduction h3 {
-    margin-top: 1.25rem;
-    font-size: 1.500rem;
-    margin-left: 5.5em;
-    font-family: lato;
-    letter-spacing: .2rem;
-    color: #605E5E;
-    -webkit-font-smoothing: antialiased;
-
-    
-
+  margin-top: 1.25rem;
+  font-size: 1.500rem;
+  margin-left: 5.5em;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: .2rem;
+  color: black;
+  -webkit-font-smoothing: antialiased;
 }
 
 .introduction h1 {
-    margin-top: 15.5rem;
-    font-size: 3rem;
-    font-family: lato;
-    font-weight: 800;
-    text-transform: uppercase;
-    letter-spacing: .3rem;
-    margin-left: 2.7em;
-    -webkit-font-smoothing: antialiased;
+  margin-top: 19.5rem;
+  font-size: 3rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: .3rem;
+  margin-left: 2.7em;
+  -webkit-font-smoothing: antialiased;
 }
 
 .introduction h1, .introduction h3 {
-    color: #6D6B6B;
-    text-align: left;
-    font-weight: ;
-
+  color: black;
+  text-align: left;
 }
-
 
 
 /* About */
 
 .about {
-    background-color: #fff;
-    overflow: hidden;
-    padding-bottom: 5rem;
-    
+  background-color: background-color: #F5F5F5;
+  ;
+  overflow: hidden;
+  padding-bottom: 5rem;
 }
 
 .about .content {
-    padding: none;
-    color: #1d1e21;
-    text-align: center;
-
+  padding: none;
+  color: #1d1e21;
+  text-align: center;
 }
 
 .about h2 {
-    font-family: lato;
-    color: #3A111C;
-    font-size: 2.75rem;
-    margin: 1.625rem 0 3.500rem;
-    -webkit-font-smoothing: antialiased;
-
+  font-family: 'Montserrat', sans-serif;
+  font-weight: lighter;
+  color: #3A111C;
+  font-size: 2.75rem;
+  margin: 1.625rem 0 3.500rem;
+  -webkit-font-smoothing: antialiased;
 }
-    
 
 .about p {
-    webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-    margin-top: -1em;
-    font-size: 1em;
-    letter-spacing: 0.05rem;
-    max-width: 45rem;
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 2rem;
-    font-family: ubuntu;
-    -webkit-font-smoothing: antialiased;
+  webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  margin-top: -1em;
+  font-size: 1em;
+  letter-spacing: 0.05rem;
+  max-width: 45rem;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 2rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: lighter;
+  -webkit-font-smoothing: antialiased;
 }
+
 
 /* Work */
 
-h2 {
-    text-align: center;
-    font-family: ubuntu;
-    color: #3A111C;
-    font-size: 2.75rem;
-    margin: 1.625rem 0 3.500rem;
-    -webkit-font-smoothing: antialiased;
+
+/* ---- .grid-item ---- */
+
+
+/* clear fix */
+
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
-h3 {
-    font-family: lato;
-    text-align: center;
-    font-size: 1.2rem;
-    color: #282828;
-}
-ul.rig {
-    list-style: none;
-    font-size: 0px;
-    margin-left: -2.5%;
-}
-ul.rig li {
-    display: inline-block;
-    padding: 10px;
-    background: #fff;
-    border: 1px solid #ddd;
-    font-size: 16px;
-    font-size: 1rem;
-    vertical-align: top;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
-ul.rig li img {
-    max-width: 100%;
-    height: auto;
-    margin: 0 0 10px;
-}
-ul.rig li h3 {
-    margin: 0 0 5px;
-}
-ul.rig li p {
-    font-size: .9em;
-    line-height: 1.5em;
-    color: #999;
+
+/* ---- .grid-item ---- */
+
+
+/*Overlay Styles */
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .9s ease;
+  background-color: #F44336;
 }
 
-ul.rig {
-    list-style: none;
-    font-size: 0px;
-    margin-left: -2.5%; /* should match li left margin */
-}
-ul.rig li {
-    display: inline-block;
-    padding: 10px;
-    margin: 0 0 2.5% 2.5%;
-    background: #fff;
-    border: 1px solid #ddd;
-    font-size: 16px;
-    font-size: 1rem;
-    vertical-align: top;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+.overlay-blue {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .9s ease;
+  background-color: #3F51B5;
 }
 
-/* class for 2 columns */
-ul.rig.columns-2 li {
-    width: 47.5%; /* this value + 2.5 should = 50% */
+.overlay-black {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .9s ease;
+  background-color: black;
 }
-/* class for 3 columns */
-ul.rig.columns-3 li {
-    width: 30.83%; /* this value + 2.5 should = 33% */
+
+.overlay-yellow {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .9s ease;
+  background-color: #00B8D4;
 }
-/* class for 4 columns */
-ul.rig.columns-4 li {
-    width: 22.5%; /* this value + 2.5 should = 25% */
+
+.text {
+  color: white;
+  font-size: 40px;
+  font-family: 'Montserrat', sans-serif;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
+
+.text .description {
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  padding: 15px 0 15px 0;
+}
+
+.text .technology {
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.grid-item:hover .overlay {
+  opacity: 1;
+}
+
+.grid-item:hover .overlay-blue {
+  opacity: 1;
+}
+
+.grid-item:hover .overlay-black {
+  opacity: 1;
+}
+
+.grid-item:hover .overlay-yellow {
+  opacity: 1;
+}
+
+.grid {
+  text-align: center;
+  width: 100%;
+}
+
+.grid-item {
+  margin: 0 auto;
+}
+
+.grid-item img {
+  display: block;
+  max-width: 100%;
+}
+
+.btn {
+  padding: 6px 10px 6px 10px;
+  font-size: 14.5px;
+  color: white;
+  background-color: Transparent;
+  border: 2px solid white !important;
+}
+
 
 /* Footer */
+
 .social {
-    background-color: #fff;
-    overflow: auto;
-    padding-bottom: 5.375rem;
-    padding-top: 8.375rem;
-    text-align: center;
+  background-color: #fff;
+  overflow: auto;
+  padding-bottom: 5.375rem;
+  padding-top: 8.375rem;
+  text-align: center;
 }
 
 .social hr {
-    border: 0;
-    border-top: 1px solid #eaebec;
-    margin: 1.313rem 0;
+  border: 0;
+  border-top: 1px solid #eaebec;
+  margin: 1.313rem 0;
 }
 
-.social .icons > li {
-    width: 2.5rem;
-    height: 2.5rem;
-    display: inline-block;
-    margin: 1.25rem 5px;
-    padding: 0.625rem 0;
-    text-align: center;
+.social .icons>li {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: inline-block;
+  margin: 1.25rem 5px;
+  padding: 0.625rem 0;
+  text-align: center;
 }
 
-.social .icons > li:hover {
-    cursor: pointer;
-
+.social .icons>li:hover {
+  cursor: pointer;
 }
 
- .social .github {
-    color: red;
+.social .github {
+  color: red;
+}
 
-}
-.social .twitter {
-    
-}
-.social .instagram {
-    
-}
+.social .twitter {}
+
+.social .instagram {}
+
 .social .copy {
-    font-size: 0.9rem;
-    font-weight: 300;
+  font-size: 0.9rem;
+  font-weight: 300;
 }
 
 .fa {
-    color: #282828;
-    -webkit-font-smoothing: antialiased;
+  color: #282828;
+  -webkit-font-smoothing: antialiased;
 }
-
-
-
 
 
 /* Responsive */
- @media only screen and (max-width: 500px) {
-    .top-navigation {
-      padding: .5em 0;
-    }
 
-    .introduction h1 {
-        font-size: 1.9em;
-        margin-left: 1em;
-        padding-top: 2em;
-    }
-
-.introduction h3 {
-        font-size: 1.4em;
-        margin-left: 1.5em;
-        display: inherit;
-
-    }
-
-    .about {
-      padding: 3em 0;
-    }
- 
+@media only screen and (max-width: 500px) {
+  .top-navigation {
+    padding: .5em 0;
   }
-
-  @media (max-width: 480px) {
-    ul.grid-nav li {
-        display: block;
-        margin: 0 0 5px;
-    }
-    ul.grid-nav li a {
-        display: block;
-    }
-    ul.rig {
-        margin-left: 0;
-    }
-    ul.rig li {
-        width: 100% !important; /* over-ride all li styles */
-        margin: 0 0 20px;
-    }
+  .introduction h1 {
+    font-size: 1.9em;
+    margin-left: 1em;
+    padding-top: 2em;
+  }
+  .introduction h3 {
+    font-size: 1.4em;
+    margin-left: 1.5em;
+    display: inherit;
+  }
+  .about {
+    padding: 3em 0;
+  }
 }
 
-
-
-
+@media (max-width: 480px) {
+  ul.grid-nav li {
+    display: block;
+    margin: 0 0 5px;
+  }
+  ul.grid-nav li a {
+    display: block;
+  }
+  ul.rig {
+    margin-left: 0;
+  }
+  ul.rig li {
+    width: 100% !important;
+    /* over-ride all li styles */
+    margin: 0 0 20px;
+  }
+  .text {
+    margin-left: 3px;
+    margin-right: 3px;
+    font-size: 17px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
+  .text .description {
+    font-size: 15px;
+    padding: 8px 0px 8px 0px;
+  }
+  .text .technology {
+    font-size: 15px;
+  }
+  .btn {
+    margin-top: 12px;
+    font-size: 10.5px;
+  }
+}
